@@ -425,7 +425,7 @@ configure(subprojects.findAll { (!excludeSubProjects.contains(it.name)) }) { pro
                     '--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED',
                     '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
                     '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
-                    '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
+
                     '--add-exports=java.base/java.lang=ALL-UNNAMED',
                     '--add-exports=java.base/java.lang.reflect=ALL-UNNAMED',
                     '--add-exports=java.base/java.lang.invoke=ALL-UNNAMED',
@@ -437,7 +437,7 @@ configure(subprojects.findAll { (!excludeSubProjects.contains(it.name)) }) { pro
                     '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
                     '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
                     '--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED',
-                    '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
+
                     '--add-exports=java.base/java.lang=ALL-UNNAMED',
                     '--add-exports=java.base/java.math=ALL-UNNAMED',
                     '--add-exports=java.base/java.util=ALL-UNNAMED',
@@ -452,7 +452,7 @@ configure(subprojects.findAll { (!excludeSubProjects.contains(it.name)) }) { pro
                     '--add-exports=java.management/java.lang.management=ALL-UNNAMED',
                     '--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED',
                     '--add-exports=java.management/sun.management=ALL-UNNAMED',
-                    '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
+
                     '--add-exports=java.management/java.lang.management=ALL-UNNAMED',
                     '--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED',
                     '--add-exports=java.management/sun.management=ALL-UNNAMED',
